# open_deep_research

./: .env.example  CLAUDE_ZH.md  README_ZH.md  pyproject.toml
.claude/rules/: docstring-style.md
docs/: README.md  一图看完整架构.md  代码架构详解.md  快速入门指南.md  项目介绍.md
src/open_deep_research/: __init__.py  configuration.py  deep_researcher.py  prompts.py  prompts_zh.py  state.py  utils.py
